--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/elevation.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
   <body>
-    <h1>Gauss Jordan</h1>
+    <div class="container">
+      <h1>Gauss Jordan</h1>
+
+      <div class="size-input">
+        <input id="width" placeholder="Matrix width" type="number" />
+        <input id="height" placeholder="Matrix height" type="number" />
+        <button class="elevation-1" onclick="generateMatrix()">Generate</button>
+      </div>
+
+      <div class="matrix-container">
+        
+      </div>
+
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
