Added title to website

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Gauss Jordan</title>
   </head>
   <body>
     <div class="container">
